--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "bluebird": "^3.1.1",
+    "debug": "^2.2.0",
+    "ioredis": "^1.14.0",
     "object-assign": "^4.0.1",
     "realizehit-subscription": "^0.1.3"
   }
